# Spectral_KdV

./: .gitmodules  CMakeLists.txt  README.md
include/: FFT.H  ODE.H  auxiliar.H
src/: FFT.C  ODE.C  auxiliar.C  test.C  test2.C
testing/: ab2bd2_tests.C  etdrk2_tests.C
